<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17sp"
        android:text="@string/username" />
    <EditText 
        android:id="@+id/et_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/username_input" />
    
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="17sp"
        android:text="@string/password" />
    
    <EditText 
        android:id="@+id/et_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_input"
        android:gravity="center"
        android:inputType="textPassword" />
    
    <Button 
        android:id="@+id/btn_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure" />
    
    <WebView 
        android:id="@+id/wv_response"
        android:layout_width="match_parent"
        android:layout_height="150dp"
         />
    
    <TextView 
        android:id="@+id/tv_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/response"
        android:scrollbars="vertical"
        android:maxLines="1000"
        android:textSize="17sp" />

</LinearLayout>
